--- a/composer.json
+++ b/composer.json
@@ -32,9 +32,9 @@
         "friendsofphp/php-cs-fixer": "^2.12"
     },
     "autoload": {
-        "psr-4": { "OpenAPI\\Client\\" : "lib/" }
+        "psr-4": { "Modstore\\EbayFeedApi\\" : "lib/" }
     },
     "autoload-dev": {
-        "psr-4": { "OpenAPI\\Client\\Test\\" : "test/" }
+        "psr-4": { "Modstore\\EbayFeedApi\\Test\\" : "test/" }
     }
 }
